# rustigniter3

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: app.toml  autoload.toml  database.toml  routes.toml  storage.toml
public/: app.css
src/: main.rs
src/app/: hooks.rs  migrations.rs  mod.rs
src/app/controllers/: api_notes.rs  auth.rs  mod.rs  notes.rs  uploads.rs  welcome.rs
src/app/models/: mod.rs  note.rs  upload.rs  user.rs
src/app/views/: dashboard.html  login.html  note_show.html  notes_index.html  uploads.html  welcome_message.html
src/system/: cache.rs  config.rs  controller.rs  database.rs  hooks.rs  loader.rs  logger.rs  macros.rs  migration.rs  mod.rs  query.rs  registry.rs  request.rs  response.rs  rest.rs  router.rs  session.rs  storage.rs  validation.rs  view.rs
user_guide/: index.md
user_guide/database/: query_builder.md
user_guide/general/: cli.md  config.md  controllers.md  deployment.md  getting_started.md  hooks.md  models.md  routing.md  security.md  urls.md  views.md
user_guide/helpers/: url_helper.md
user_guide/libraries/: cache_logging.md  form_validation.md  rest.md  sessions.md  uploads.md
